--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@libsql/client": "^0.6.0",
+    "@nextui-org/react": "^2.2.10",
+    "@nextui-org/switch": "^2.0.25",
+    "framer-motion": "^11.0.28",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.2",
+    "sweetalert2": "^11.10.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
