--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.2",
     "sweetalert2": "^11.10.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "next-pwa": "5.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
