--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@libsql/client": "^0.6.0",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/switch": "^2.0.25",
+    "chord-transposer": "^3.0.9",
     "framer-motion": "^11.0.28",
     "next": "14.0.4",
     "react": "^18",
