--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@libsql/client": "^0.6.0",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/switch": "^2.0.25",
+    "cheerio": "^1.0.0-rc.12",
     "chord-transposer": "^3.0.9",
     "framer-motion": "^11.0.28",
     "next": "14.0.4",
@@ -21,6 +22,7 @@
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.2",
     "sweetalert2": "^11.10.7",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
