--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@libsql/client": "^0.6.0",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/switch": "^2.0.25",
+    "@webscopeio/react-textarea-autocomplete": "^4.9.2",
     "cheerio": "^1.0.0-rc.12",
     "chord-transposer": "^3.0.9",
     "framer-motion": "^11.0.28",
