--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@libsql/client": "^0.6.0",
-    "@nextui-org/react": "^2.2.10",
-    "@nextui-org/switch": "^2.0.25",
-    "@webscopeio/react-textarea-autocomplete": "^4.9.2",
-    "cheerio": "^1.0.0-rc.12",
-    "chord-transposer": "^3.0.9",
-    "framer-motion": "^11.0.28",
+    "@libsql/client": "0.6.0",
+    "@nextui-org/react": "2.2.10",
+    "@nextui-org/switch": "2.0.25",
+    "@webscopeio/react-textarea-autocomplete": "4.9.2",
+    "cheerio": "1.0.0-rc.12",
+    "chord-transposer": "3.0.9",
+    "framer-motion": "11.0.28",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.1.0",
-    "react-sortablejs": "^6.1.4",
-    "sortablejs": "^1.15.2",
-    "sweetalert2": "^11.10.7",
-    "use-debounce": "^10.0.0",
-    "uuid": "^9.0.1"
+    "react": "18",
+    "react-dom": "18",
+    "react-icons": "5.1.0",
+    "react-sortablejs": "6.1.4",
+    "socket.io": "4.7.5",
+    "sortablejs": "1.15.2",
+    "sweetalert2": "11.10.7",
+    "use-debounce": "10.0.0",
+    "uuid": "9.0.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "autoprefixer": "10.0.1",
+    "eslint": "8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "8",
+    "tailwindcss": "3.3.0"
   }
 }
