--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +15,7 @@
     "@webscopeio/react-textarea-autocomplete": "4.9.2",
     "cheerio": "1.0.0-rc.12",
     "chord-transposer": "3.0.9",
+    "express": "^4.19.2",
     "framer-motion": "11.0.28",
     "next": "14.0.4",
     "react": "18",
@@ -22,6 +23,7 @@
     "react-icons": "5.1.0",
     "react-sortablejs": "6.1.4",
     "socket.io": "4.7.5",
+    "socket.io-client": "^4.7.5",
     "sortablejs": "1.15.2",
     "sweetalert2": "11.10.7",
     "use-debounce": "10.0.0",
