--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "chord-transposer": "3.0.9",
     "express": "^4.19.2",
     "framer-motion": "11.0.28",
-    "next": "14.0.4",
+    "jsdom": "^24.0.0",
+    "next": "^14.2.3",
     "react": "18",
     "react-dom": "18",
     "react-icons": "5.1.0",
@@ -25,7 +26,7 @@
     "socket.io": "4.7.5",
     "socket.io-client": "^4.7.5",
     "sortablejs": "1.15.2",
-    "sweetalert2": "11.10.7",
+    "sweetalert2": "^11.6.13",
     "use-debounce": "10.0.0",
     "uuid": "9.0.1",
     "zustand": "^4.5.2"
