--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next": "^14.2.3",
     "react": "18",
     "react-dom": "18",
-    "react-icons": "5.1.0",
+    "react-icons": "^5.1.0",
     "react-sortablejs": "6.1.4",
     "socket.io": "4.7.5",
     "socket.io-client": "^4.7.5",
